--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task2-portfolio</title>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
 </head>
 <body>
     <header class="header">
         <div class="left">Nithin Sai</div>
         <div class="right">
-            <a  id="downloadButton" class="link" href="resume.html">Resume</a>
             <a class="link" href="pro.html">Projects</a>
             <a class="link" href="contact.html">Contact</a>
         </div>
@@ -47,15 +48,33 @@
         <button class="button3"><a href="contact.html">Contact</a></button>
     </div>
     <footer class="footer">
-        <div class="footer-content">
-            <h2 class="ph">Phone</h2>
-            <p class="p3">+91 9573757096</p>
-            <h2 class="eh">Email</h2>
-            <a class="mail" href= "mailto:nithinchoudaryjampala@hmail.com">nithinchoudaryjampala@gmail.com</a>
-            <h2 class="fh">Follow me</h2>
-            <a href="https://www.linkedin.com/in/nithinsaichoudaryjampala/"><img class="social1" src="img/linkedin.jpg" alt="linkedinlogo"></a>
-            <a href="https://github.com/nithinsaichoudary"><img class="social2" src="img/github.png" alt="githublogo"></a>
-            <p class="copy">&copy; Made by Nithin Sai.</p>
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Nithin Sai</h4>
+                    <ul>
+                        <li><a href="Pro.html">Projects</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact Me</h4>
+                    <ul>
+                        <li><a href="mailto:nithinchoudaryjampala@gmail.com">   NITHINCHOUDARYJAMPALA@GMAIL.COM</a></li>
+                        <li><a href=" https://wa.me/9573757096">+919573757096</a></li>
+                        <li><a href="https://www.google.com/maps/place/Visakhapatnam,+Andhra+Pradesh/@17.7389304,83.0977781,11z/data=!3m1!4b1!4m6!3m5!1s0x3a39431389e6973f:0x92d9c20395498468!8m2!3d17.6868159!4d83.2184815!16zL20vMDFqbXBm?entry=ttu">Vishakaptnam, Andhra pradesh</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>follow me</h4>
+                    <div class="social-links">
+                        <a href="https://github.com/nithinsaichoudary"><i class="fab fa-github"></i></a>
+                        <a href="https://twitter.com/nithin_cj03"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/nithincj03/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/nithinsaichoudaryjampala/"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 
